2004-03-03  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b89

	* Bug 831931: Security check to ensure that user has rights to the target
	  album before being allows to move photos or albums.  Minor text correction,
	  and check for uninitialized variables as well.

	* Bug 851148: Fix 'unknown' error which occurs when using left/right navigation
	  in an album with hidden photos.  This removes albums from the navigation entirely,
	  since it doesn't make sense for them to be in there.

	* Bug 908732: Fix highlight photo error.  Photos weren't being checked for isMovie()
	  before we tried to resize/highlight them.

	* Other:  Check for variable initialization in edit_thumb.php

	* Other:  Redirect not-logged-in users to albums.php if they attempt to navigate
	  to upgrade_albums.php.  Previously, a blank page was displayed.

	* Other:  Variable name change in popup_link() - "$class" (though valid) was causing
	  errors in at least one PHP IDE due to "class" being a reserved keyword. Changed to 
	  "$cssclass"

2004-03-02 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b88

	* Change: Gallery now also uses GeekLogs user language.
		  Also Langpacks were adjust to fit.
		  Note: Gallery supports more different Languages then GL, 
			but GL has some different encodings.
			So Gallery does not support all GL Languages.

2004-03-02 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b87

	* Change: remove doubled cvs id in setup/*
		  (Thanks to Vallimar)

2004-03-02 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b86

	* Bugfix: Now correctly fixed #907950.

2004-03-02 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b85

	* Change: removed doubled cvs id in setup/config_data.inc
		  (Thanks to Vallimar)

2004-03-02 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b84

	* Change: Again some code cleanup in lib/lang.php

	* Change: Replaced $GALLERY_BASEDIR in:
	  - ALL in init.php, user_preferences.php, tools/build_manifest.php, tools/g1-report.php,