@@ -1,3 +1,11 @@
+2004-03-03  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b90
+
+	* Added new Spiral Notebook frame.  Thanks to carlandtracey.com;
+	  converted to html_wrap/frames format by me.
+
+	* Bug 821073: fixed cut_image() to not return error status when
+	  used with ImageMagick.
+
 2004-03-03  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b89
 
 	* Bug 831931: Security check to ensure that user has rights to the target
